@@ -10,4 +10,5 @@ from hachoir_parser.misc.pdf import PDFDocument
 from hachoir_parser.misc.pifv import PIFVFile
 from hachoir_parser.misc.hlp import HlpFile
 from hachoir_parser.misc.gnome_keyring import GnomeKeyring
+from hachoir_parser.misc.bplist import BPList
 
